--- a/Resources/translations/content_tree.en.xliff
+++ b/Resources/translations/content_tree.en.xliff
@@ -6,10 +6,15 @@
       <note>The source node in most cases contains the sample message as written by the developer. If it looks like a dot-delimitted string such as "form.label.firstname", then the developer has not provided a default message.</note>
     </header>
     <body>
-      <trans-unit id="85618864869a0c2b84b91df98a729c3e1f2eb21f" resname="load_more">
-        <source>Load More</source>
-        <target state="new">Load More</target>
-        <note>key: load_more</note>
+      <trans-unit id="9042dc6dc12016a1ffce82c61781eb8df00d3a66" resname="loading_more">
+        <source>Loading more...</source>
+        <target state="new">Loading more...</target>
+        <note>key: loading_more</note>
+      </trans-unit>
+      <trans-unit id="2be9699b658299055002412aa53431dc89281fcf" resname="show_more">
+        <source>Show more</source>
+        <target state="new">Show more</target>
+        <note>key: show_more</note>
       </trans-unit>
     </body>
   </file>
