--- a/Resources/translations/content_tree.en.xliff
+++ b/Resources/translations/content_tree.en.xliff
@@ -11,6 +11,11 @@
         <target state="new">Collapse all</target>
         <note>key: collapse_all</note>
       </trans-unit>
+      <trans-unit id="0cba8ae8f7a758a11886b6be4e7ce7e570063f8f" resname="expand_item.limit.message">
+        <source>Cannot load subitems for given location due to performance limits. You reached max tree depth.</source>
+        <target state="new">Cannot load subitems for given location due to performance limits. You reached max tree depth.</target>
+        <note>key: expand_item.limit.message</note>
+      </trans-unit>
       <trans-unit id="9042dc6dc12016a1ffce82c61781eb8df00d3a66" resname="loading_more">
         <source>Loading more...</source>
         <target state="new">Loading more...</target>
@@ -20,6 +25,11 @@
         <source>Show more</source>
         <target state="new">Show more</target>
         <note>key: show_more</note>
+      </trans-unit>
+      <trans-unit id="fa32f3cd5131d17d3c18b13089f0c93216a1e85c" resname="show_more.limit_reached">
+        <source>Loading limit reached</source>
+        <target state="new">Loading limit reached</target>
+        <note>key: show_more.limit_reached</note>
       </trans-unit>
     </body>
   </file>
